# duckdb-extension-clickhouse-native

./: Cargo.toml  Makefile  README.md  numbers.clickhouse
.github/workflows/: MainDistributionPipeline.yml
src/: clickhouse_scan.rs  folder.rs  lib.rs
test/sql/: chsql_native.test  clickhouse_native.test
