[package]
name = "chsql_native"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[profile.release]
lto = true
strip = true

[[example]]
# crate-type can't be (at the moment) be overriden for specific targets
# src/wasm_lib.rs forwards to src/lib.rs so that we can change from cdylib
# (that is needed while compiling natively) to staticlib (needed since the
# actual linking will be done via emcc
name = "chsql_native"
path = "src/wasm_lib.rs"
crate-type = ["staticlib"]

[dependencies]
duckdb = { version = "1.1.1", features = ["vtab-loadable"] }
duckdb-loadable-macros = "0.1.3"
libduckdb-sys = { version = "1.1.1", features = ["loadable-extension"] }
byteorder = "1.4"
serde_derive = "1.0.217"
serde_json = "1.0.134"
tokio = { version = "1.42.0", features = ["rt", "rt-multi-thread"] }
serde = "1.0.217"
clickhouse-rs = "=1.1.0-alpha.1"
